<resources>
    <string name="app_name">M1TmdbApp2023</string>
    <string name="main_activity_title">Popular persons</string>
    <string name="person_detail_activity_title">Person detail</string>
    <string name="total_results_text">"Showing %1d/%1d persons"</string>
    <string name="total_results_default_text">Nothing to show</string>
    <string name="no_label">No label !</string>

    <!-- Notification related strings -->
    <string name="notification_channel_name">Popular persons</string>
    <string name="notification_channel_description">Receive the name and score of the most popular person of the day</string>
    <string name="notification_title">Most popular person</string>
    <string name="notification_content">%1$s with a score of %2$f</string>
    <string name="saved_high_score_key" translatable="false">shared_pref_high_score_key</string>

    <string-array name="score_rating">
        <item>POOR</item>
        <item>FAIR</item>
        <item>BAD</item>
        <item>NORMAL</item>
        <item>GOOD</item>
        <item>BEST</item>
    </string-array>

    <!-- array values are resulting from the conversion of hexadecimal colors ffff4331, fffe9c12,
    fffcd01b, ffc8dd53, ff81c212, ff00b622 in the ARGB space to Android requested signed integer.
    Used online converter https://www.rapidtables.com/convert/number/hex-to-decimal.html-->
    <string-array name="rating_colors">
        <item>-48335</item>
        <item>-91118</item>
        <item>-208869</item>
        <item>-3613357</item>
        <item>-8273390</item>
        <item>-16730590</item>
    </string-array>

    <!-- Sensor demo -->
    <string name="sensor_demo_activity_title">Sensor Demo</string>
    <string name="sensor_demo_button">Sensor Demo</string>
    <string name="sensor_list_caption">Sensor list</string>
    <string name="sensor_values_caption">Sensor values</string>
    <string name="no_sensor_values">No values &#8230;</string>
    <string name="type_caption">Type:</string>
    <string name="resolution_caption">Resolution:</string>
    <string name="range_caption">Max range:</string>
    <string name="sensor_name">sensor name</string>
    <string name="sensor_unknown">unknown sensor</string>

    <string-array name="dial_needle_colors">
        <item>-16776961</item>
        <item>-65536</item>
        <item>-16711936</item>
        <item>-65281</item>
        <item>-256</item>
        <item>-1611681</item>
        <item>-8273390</item>
        <item>-208869</item>
        <item>-4342339</item>
    </string-array>

</resources>