<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sensorItem"
            type="android.hardware.Sensor" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sensor_item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sensor_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@{sensorItem.name}"
            android:textAlignment="textStart"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/sensor_item_name"
            app:layout_constraintBottom_toTopOf="@+id/sensor_type_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sensor Name" />

        <TextView
            android:id="@+id/type_caption_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/type_caption"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/sensor_item_caption"
            app:layout_constraintBottom_toBottomOf="@+id/sensor_type_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sensor_type_tv" />

        <TextView
            android:id="@+id/resolution_caption_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resolution_caption"
            android:textColor="@color/light_blue_600"
            android:textSize="@dimen/sensor_item_caption"
            app:layout_constraintBottom_toBottomOf="@+id/sensor_resolution_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sensor_resolution_tv" />

        <TextView
            android:id="@+id/maxrange_caption_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/range_caption"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/sensor_item_caption"
            app:layout_constraintBottom_toBottomOf="@+id/sensor_maxrange_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sensor_maxrange_tv" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="type_caption_tv,resolution_caption_tv,maxrange_caption_tv" />

        <TextView
            android:id="@+id/sensor_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{sensorItem.stringType}"
            android:textSize="@dimen/sensor_item_value"
            app:layout_constraintBottom_toTopOf="@+id/sensor_resolution_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/sensor_name_tv"
            tools:text="&lt;type&gt;" />

        <TextView
            android:id="@+id/sensor_resolution_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{String.valueOf(sensorItem.resolution)}"
            android:textSize="@dimen/sensor_item_value"
            app:layout_constraintBottom_toTopOf="@+id/sensor_maxrange_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/sensor_type_tv"
            tools:text="&lt;resolution&gt;" />

        <TextView
            android:id="@+id/sensor_maxrange_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{String.valueOf(sensorItem.maximumRange)}"
            android:textSize="@dimen/sensor_item_value"
            app:layout_constraintBottom_toTopOf="@+id/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/sensor_resolution_tv"
            tools:text="&lt;max range&gt;" />

        <FrameLayout
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_maxrange_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>